<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background"
    android:padding="16dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/tvViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewScoreTV"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvViewQuestionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvViewScore"
        android:text="@string/viewQuestionCountTV"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvViewCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_toEndOf="@+id/tvViewQuestionCount"
        android:text="@string/countdownTV"
        android:textColor="@color/white"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:text="@string/questionTV"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/rbOptionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionOneRB"
            android:textColor="@color/white" />


        <RadioButton
            android:id="@+id/rbOptionTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionTwoRB"
            android:textColor="@color/white" />


        <RadioButton
            android:id="@+id/rbOptionThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionThreeRB"
            android:textColor="@color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/btnConfirmNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_marginTop="16dp"
        android:text="@string/confirmNextBTN"
        app:backgroundTint="#AB47BC" />

</RelativeLayout>