<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/question_marks"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_purple"
        android:gravity="center"
        android:text="@string/mainTitleTV"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="55sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHighscore"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnStartQuiz"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/highscoreTV"
        android:textColor="@android:color/holo_purple"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnStartQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/startQuizBTN"
        android:textColor="@android:color/holo_blue_bright"
        app:backgroundTint="@android:color/holo_purple" />

</RelativeLayout>